gap fix attempt

--- a/style.css
+++ b/style.css
@@ -32,10 +32,12 @@ p{
 
 .big{
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(4, 1fr); */
+  grid-template-columns: auto;
+  grid-template-rows: auto;
   column-gap: 30px;
-  row-gap: 5px;
+  row-gap: 30px;
   max-width: 100%;
   object-fit: cover;
   grid-template-areas: 
